# Copyright (c) 2025 vivo Mobile Communication Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/templates/rust.gni")
import("//build/toolchain/blueos.gni")
import("//kernel/common_crate_rustflags.gni")

group("check_apps") {
  deps = [ "//apps/example/fs:fs_example($libc_toolchain)" ]
  deps += [ "//apps/example/net:net_example($libc_toolchain)" ]
  deps += [
    "//apps/example/ftp_client:ftp_client_example_test_runner($libc_toolchain)",
  ]
}
