# Copyright (c) 2025 vivo Mobile Communication Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/templates/build_template.gni")
import("//build/templates/rust.gni")
import("//build/toolchain/blueos.gni")

executable("ftp_client_example") {
  crate_name = "ftp_client_example"
  crate_type = "bin"

  sources = [ "src/main.rs" ]
  deps = [
    "//external/rust-ftp/master:ftp",
    "//external/vendor/log-0.4.28:log",
    "//kernel/rsrt:rsrt_std",
    "//librs",
  ]
  configs += [ "//build/boards/${board}:kernel_config" ]
  rustflags = [
    "--cfg",
    "feature=\"debug_print\"",
    "--cfg",
    "feature=\"log\"",
  ]
}

gen_qemu_runner("ftp_client_example_test_runner") {
  semihosting = true
  img = ":ftp_client_example"
  qemu = qemu_exe
  machine = machine
  qemu_args = qemu_extra_args
  net_args = qemu_net_args
  block_img = "ftp_client_example.img"
  block_args = qemu_block_args
}
