# Copyright (c) 2025 vivo Mobile Communication Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/templates/rust.gni")
import("//build/toolchain/blueos.gni")

executable("no_std_example") {
  crate_name = "no_std_example"
  crate_type = "bin"

  sources = [ "src/main.rs" ]
  deps = [
    "//kernel/kernel:blueos",
    "//kernel/rsrt",
    "//librs",
  ]
}

gen_qemu_runner("no_std_example_runner") {
  img = ":no_std_example"
  qemu = "$qemu_exe"
  machine = "$machine"
  qemu_args = qemu_extra_args
  net_args = qemu_net_args
  block_img = "no_std_example_block.img"
  block_args = qemu_block_args
}
